# worldturtle-decimate

./: LICENSE  README.md  stack.yaml  worldturtle-decimate.cabal
src/: CircleList.hs  CircleListDraw.hs  Main.hs
